<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NinthAActivity">

    <EditText
        android:id="@+id/etUrl"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/insert_the_website"
        android:importantForAutofill="no"
        android:inputType="textUri|textShortMessage|textLongMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUrl"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvHttps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/https_www"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVisit"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>